# machine_learning

./: Makefile  README.md  gan.py  main.py  pyproject.toml  resnet.py
load/: mnist.py
model/: gan.py  resnet.py  test.py
models/: gan.py  resnet.py
models/resnet/: __init__.py  model.py  train.py
resnet/: model.py  train.py
uitls/: load.py
utils/: distribute.py  tpu.py
