[tool.poetry]
name = "machine_learning"
version = "0.1.0"
description = ""
authors = ["Junichi Sato <sat0b.3ee@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
